# short-url

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/api/: __init__.py  dependencies.py  settings.py
backend/tests/: conftest.py  test_settings.py
scripts/: test.sh
